# jenkins_log_cpp_writer

./: CMakeLists.txt  LICENSE  README.md
include/: ExportJenkinsLog.h  RegTestUtilities.h
test/: CMakeLists.txt  example_log.xml  main.cpp
tinyxml/: CMakeLists.txt
